--- a/src/partials/main/slider.html
+++ b/src/partials/main/slider.html
@@ -2,6 +2,8 @@
 <div class="slider slider_wrap">
 	<div class="slider-inside">
 		@@include('../unit-templates/slide.html')
+		@@include('../unit-templates/slide.html')
+		@@include('../unit-templates/slide.html')
 	</div>
 	<div class="slider_indicator">
 		<div class="container">
