--- a/src/partials/popups/cart.html
+++ b/src/partials/popups/cart.html
@@ -24,7 +24,7 @@
 							<p>`+product_list[i].description+`</p>
 						</div>
 					</div>
-					<div class="row">
+					<div class="row pt-lg-0 pt-2">
 						<div class="col-md-6">
 							<div class="prop-sizing">
 								<span>Size: </span>
