--- a/src/partials/popups/confirm.html
+++ b/src/partials/popups/confirm.html
@@ -68,7 +68,7 @@
 		</div>
 		<div class="container-fluid hidden" id="popup_confirm_ukrpost_address">
 			<div class="row">
-				<div class="col-md-12 pb-4 pt-lg-5">
+				<div class="col-md-12 pb-4 pt-5">
 					<label class="select-label label">Choose shipping address:</label> 
 					<select name="ukrpost_address" class="select inline-select">
 						@@for ( var i = 0; i < address.length; i++ ) {
@@ -147,7 +147,7 @@
 		</div>
 		<div class="container-fluid">
 			<div class="row">
-				<div class="col-md-12 pb-4 pt-lg-5">
+				<div class="col-md-12 pb-4 pt-5">
 					<label class="select-label label">Payment method:</label> 
 					<select name="payment_method" class="select inline-select">
 						@@for ( var i = 0; i < payment.length; i++ ) {
