--- a/src/partials/unit-templates/product/product-item.html
+++ b/src/partials/unit-templates/product/product-item.html
@@ -1,6 +1,6 @@
 @@for ( var i=0; i<list_qty; i++ ) {
-	<div class="col-md-@@block_size">
-	<div class="product-item_big">
+	<div class="col-@@block_size">
+		<div class="product-item_big">
 		<a href="`+product_list[i].product_url+`" class="product-item_big_image">
 			<img src="`+product_list[i].image_src+`" alt="" />
 		</a>
