--- a/src/partials/unit-templates/selector/uni-block.html
+++ b/src/partials/unit-templates/selector/uni-block.html
@@ -1,5 +1,10 @@
 <div class="selector_block-item">
-	<div class="selector-item_title">@@title</div>
+	<div class="selector-item_title">
+		<span>@@title</span>
+		<div class="svg_plus-minus_wrap">
+			<div class="svg_plus-minus icon ico_plus"></div>
+		</div>
+	</div>
 	<div class="selector_item_list">
 		@@include('@@file_url', { "vars": "@@vars" })
 	</div>
