--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,12 +1,12 @@
 <div class="container">
 	<div class="row align-items-center">
-		<div class="col-md-4 align-self-stretch">
+		<div class="col-md-4 align-self-stretch copyright-wrap">
 			<div class="d-flex flex-column align-items-md-start justify-content-md-between">
 				<img src="../images/images/logo.png" class="logo" alt="" />
 				<div class="copyright">shopy c 2015 . your copy right here</div>
 			</div>
 		</div>
-		<div class="col-md-6">
+		<div class="col-12 col-md-6">
 			<!-- FOOTER MENU -->
 			<ul class="footer_menu">
 				@@for (var i=0; i<footer_menu.length; i++) {
@@ -14,7 +14,7 @@
 					}
 			</ul>
 		</div>
-		<div class="col-md-2">
+		<div class="col-md-2 payment-wrap">
 			@@include('./unit-templates/payment-methods.html')
 		</div>
 	</div>
