--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -3,12 +3,12 @@
 	<div class="col-12">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-6">
-					<div class="d-flex">
+				<div class="col-sm-8">
+					<div class="d-flex contacts-wrap">
 						@@include('./unit-templates/msg-tel-info.html')
 					</div>
 				</div>
-				<div class="col-md-6">
+				<div class="col-sm-4">
 					<div class="d-flex justify-content-end">
 						@@include('./unit-templates/social-buttons.html')
 					</div>
@@ -21,18 +21,19 @@
 <div class="header_bottom row align-items-center">
 	<div class="col-12">
 		<div class="container">
-			<div class="row">
-				<div class="col-md-2">
+			<div class="row header_bottom_inside">
+				<div class="col-5 col-sm-6 col-md-2">
 					<img src="../images/images/logo.png" class="logo" alt="" />
 				</div>
-				<div class="col-md-8">
+				<div class="col-2 col-sm-12 col-md-8 adaptive-menu">
+					<div class="sandwich-btn btn-icon icon-color-custom ico_sandwich"></div>
 					@@include('./unit-templates/main-menu.html', {"menu": [{"title": "Home", "url": "index.html", "class": " class='active'"},
 					{"title": "Products", "url": "products.html"},
 					{"title": "Hot Deals", "url": "#"},
 					{"title": "About", "url": "#"},
 					{"title": "Contact", "url": "contact.html"}]})
 				</div>
-				<div class="col-md-2 d-flex justify-content-end">
+				<div class="col-5 col-sm-6 col-md-2 d-flex justify-content-end header_bottom_right-wrap">
 					<div class="header_bottom_right">
 						<button type="button" class="btn-icon icon-color-custom ico_search"></button>
 						<button type="button" class="btn-icon icon-color-custom ico_user"></button>
