--- a/src/partials/main/advertising.html
+++ b/src/partials/main/advertising.html
@@ -1,9 +1,9 @@
 <!-- ADVERTISING section -->
 <div class="row advertising_wrap">
-	<div class="col-md-7 advertising">
+	<div class="col-12 col-lg-7 advertising mb-lg-0 mb-2">
 		@@include('../unit-templates/promo-full-winter.html')
 	</div>
-	<div class="col-md-5 advertising">
+	<div class="col-12 col-lg-5 advertising">
 		@@include('../unit-templates/promo-any.html')
 	</div>
 </div>
