--- a/src/partials/main/contact-info.html
+++ b/src/partials/main/contact-info.html
@@ -9,7 +9,7 @@
 				<div class="address-row">
 					<b>Address: </b> <span>State, City, Street num</span>
 				</div>
-				<div class="d-flex">
+				<div class="d-flex flex-sm-row flex-column align-items-center">
 					@@include('../unit-templates/msg-tel-info.html')
 				</div>
 			</div>
