--- a/src/partials/popups/signin.html
+++ b/src/partials/popups/signin.html
@@ -39,7 +39,7 @@
 			<input class="checkbox" type="checkbox" name="shipping_info" value="shipping_info" id="check_shipping_info" />
 			<label for="check_shipping_info" class="label">Add shipping information</label>
 		</div>
-		<div class="d-flex flex-column py-2" id="signin_shipping_info">
+		<div class="d-flex flex-column py-2 hidden" id="signin_shipping_info">
 			<div class="h6">Shipping information</div>
 			<div class="container-fluid">
 				<div class="row">
