--- a/src/sass/units.scss
+++ b/src/sass/units.scss
@@ -36,6 +36,10 @@
 .contact {
 	@include flex_center();
 	padding: 5px 20px 5px 0;
+	@media screen and (max-width: 479px) {
+		padding-left: 6px;
+		padding-right: 6px;
+	}
 
 	.icon {
 		margin-right: 0.5rem;
@@ -52,6 +56,11 @@
 		@include fonts(HarmoniaSansReg, 0.75rem, 400);
 	}
 }
+.contacts-wrap {
+	@media screen and (max-width: 479px) {
+		flex-wrap: wrap;
+	}
+}
 
 .logo {
 	max-width: 100%;
@@ -63,6 +72,10 @@
 		display: flex;
 		flex-wrap: wrap;
 		width: 100%;
+		@media screen and (max-width: 768px) {
+			justify-content: space-around;;
+			align-items: center;
+		}
 
 		li {
 			a {
@@ -80,6 +93,14 @@
 		}
 	}
 }
+.sandwich-btn {
+	min-height: 100%;
+	width: 44px;
+	height: 44px;
+	padding: 4px;
+	cursor: pointer;
+	display: none;
+}
 
 /* slider ----------------------- */
 .slider {
@@ -92,9 +113,9 @@
 	}
 }
 .slide {
-	width: 100%;
 	height: 100%;
-	@include absolute();
+	position: absolute;
+	top: 0;
 }
 .slider-description_purchase {
 	margin-bottom: 3px;
@@ -182,10 +203,16 @@
 /* section ------------------------ */
 .title-section_wrap {
 	padding: 116px 0 105px;
+	@media screen and (max-width: 1200px) {
+		padding: 76px 0 65px;
+	}
 }
 .title-block {
 	padding-bottom: 65px;
 	text-align: center;
+	@media screen and (max-width: 1200px) {
+		padding-bottom: 45px;
+	}
 
 	p {
 		padding-top: 24px;
@@ -293,6 +320,9 @@ $product_item_transition: 0.4s;
 		align-items: center;
 		justify-content: center;
 		@include transition(all, $product_item_transition);
+		@media screen and (max-width: 479px) {
+			width: auto;
+		}
 
 		img {
 			max-height: 100%;
@@ -311,9 +341,15 @@ $product_item_transition: 0.4s;
 		height: 100%;
 		width: 226px;
 		padding-top: 14px;
+		@media screen and (max-width: 479px) {
+			width: auto;
+		}
 
 		.product-item_name {
 			padding-bottom: 10px;
+			@media screen and (max-width: 992px) {
+				padding-left: 8px;
+			}
 		}
 		.product-item_price {
 			padding: 0;
@@ -333,6 +369,10 @@ $product_item_transition: 0.4s;
 		padding: 21px 27px 0;
 		transform: scaleY(1);
 		@include transition(all, $product_item_transition);
+		@media screen and (max-width: 992px) {
+			padding-right: 8px;
+			padding-left: 8px;
+		}
 
 		.icon, .product-item_price {
 			transform: scaleY(1);
@@ -388,16 +428,80 @@ $product_item_transition: 0.4s;
 	padding: 1.31rem 15%;
 	margin: 15px 0;
 	background-color: $white_place;
+	@media screen and (max-width: 768px) {
+		position: relative;
+		padding: 2px 8%;
+		margin: 6px 0;
+	}
 
 	.selector-item_title {
 		padding: 1.25rem 0 1.31rem;
 		@include fonts(HarmoniaSansBlack, 1.13rem, 800, 1.13rem);
 		color: $tx_important;
+		@media screen and (max-width: 768px) {
+			@include flex_center();
+			justify-content: space-between;
+			height: 65px;
+		}
+
+		&:hover {
+			@media screen and (max-width: 768px) {
+				cursor: pointer;
+			}
+		}
+		.svg_plus-minus_wrap {
+			display: none;
+			@media screen and (max-width: 768px) {
+				display: block;
+				width: 24px;
+				height: 24px;
+				position: relative;
+				overflow: hidden;
+				@include transition();
+			}
+		}
+		.svg_plus-minus {
+			padding: 0;
+			@media screen and (max-width: 768px) {
+				display: block;
+				width: 24px;
+				height: 24px;
+				@include absolute(50%, 0);
+				transform: translateY(-50%);
+			}
+		}
+	}
+	&:hover {
+		.selector_item_list {
+			@media screen and (max-width: 768px) {
+				transform: scaleY(1);
+			}
+		}
+		.selector-item_title {
+			.svg_plus-minus_wrap {
+				@media screen and (max-width: 768px) {
+					height: 3.6px;
+				}
+			}
+		}
 	}
 }
 .selector_item_list {
 	display: flex;
 	flex-direction: column;
+	@media screen and (max-width: 768px) {
+		position: absolute;
+		z-index: 50;
+		left: 0;
+		display: flex;
+		flex-direction: column;
+		width: 100%;
+		padding-right: 8%;
+		padding-left: 8%;
+		background-color: $white_place;
+		transform: scaleY(0);
+		@include transition();
+	}
 
 	.selector_string-item {
 		padding: 1.08rem 0;
@@ -469,6 +573,10 @@ $product_item_transition: 0.4s;
 /* advertising -------------------- */
 .advertising {
 	height: 100px;
+	@media screen and (max-width: 479px) {
+		height: auto;
+		min-height: 80px;
+	}
 
 	.advertising_inside {
 		width: 100%;
@@ -476,6 +584,10 @@ $product_item_transition: 0.4s;
 		background-color: $white_place;
 		@include border("normal", top, bottom);
 		@include border("normal", left, right);
+		@media screen and (max-width: 479px) {
+			height: auto;
+			min-height: 80px;
+		}
 	}
 }
 
@@ -549,16 +661,29 @@ $product_item_transition: 0.4s;
 /* product-page product description ------------- */
 .product-block {
 	display: flex;
+	@media screen and (max-width: 768px) {
+		flex-direction: column;
+	}
 
 	.product-desc-image {
 		flex-shrink: 0;
 		padding: 0 68px 10px;
+		@media screen and (max-width: 768px) {
+			padding-bottom: 60px;
+		}
 
 		.description-gallery {
 			height: 100%;
 			min-height: 400px;
 			max-height: 500px;
 			width: 330px;
+			@media screen and (max-width: 768px) {
+				height: 350px;
+				margin: 0 auto;
+			}
+			@media screen and (max-width: 479px) {
+				max-width: 100%;
+			}
 		}
 	}
 }
@@ -573,6 +698,9 @@ $product_item_transition: 0.4s;
 			text-align: left;
 			color: $tx_important;
 			margin-bottom: 32px;
+			@media screen and (max-width: 479px) {
+				text-align: center;
+			}
 		}
 		.product_subtitle {
 			@include fonts(HarmoniaSansSemiBd, 1.13rem, 500, 1.13rem);
@@ -588,17 +716,31 @@ $product_item_transition: 0.4s;
 		padding: 40px 0 34px;
 		@include border("normal", bottom);
 		display: flex;
+		@media screen and (max-width: 479px) {
+			flex-direction: column;
+		}
 
 		.product_prop-block_half {
 			width: 50%;
-			height: 26px;
+			min-height: 26px;
 			@include flex_center();
+			@media screen and (max-width: 479px) {
+				width: 100%;
+				justify-content: center;
+			}
 
 			&:first-child {
 				@include border("light", right);
+				@media screen and (max-width: 479px) {
+					border: none;
+					padding-bottom: 30px;
+				}
 			}
 			&:last-child {
 				justify-content: flex-end;
+				@media screen and (max-width: 479px) {
+					justify-content: center;
+				}
 			}
 		}
 	}
@@ -609,6 +751,19 @@ $product_item_transition: 0.4s;
 
 		.product_purchase-block {
 			@include flex_center();
+			@media screen and (max-width: 479px) {
+				flex-direction: column;
+			}
+			.product-item_buttons {
+				@media screen and (max-width: 479px) {
+					padding-bottom: 30px;
+				}
+			}
+		}
+		.price {
+			@media screen and (max-width: 479px) {
+				align-self: center;
+			}
 		}
 	}
 }
@@ -775,12 +930,17 @@ $product_item_transition: 0.4s;
 }
 .product-item_buttons {
 	display: inline-flex;
-	justify-content: center;
+	justify-content: space-around;
 	align-items: flex-end;
+	min-width: 90px;
+	max-width: 100%;
+	width: 160px;
+	padding-right: 6px;
+	@media screen and (max-width: 992px) {
+		padding-right: 0;
+	}
 
 	.btn-icon {
-		margin-left: 10px;
-		margin-right: 16px;
 		padding-top: 0;
 		padding-bottom: 0;
 	}
